the data files are moved to the separated folder

--- a/Story.ipynb
+++ b/Story.ipynb
@@ -151,7 +151,7 @@
    "id": "7195729b-ec8b-44e1-ae74-234f340994d5",
    "metadata": {},
    "source": [
-    "### 2021 Misterious silent disaster"
+    "### 2021 Mysterious silent disaster"
    ]
   },
   {
