The notebook is more readable

--- a/Story.ipynb
+++ b/Story.ipynb
@@ -113,14 +113,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f44663c-302a-45e2-89d7-073dd69d690d",
-   "metadata": {},
+   "id": "ca95b718-6ab7-4c14-abcd-b19dca2f3a87",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "### [2021 Meron crowd crush](https://en.wikipedia.org/wiki/2021_Meron_crowd_crush)\n",
-    "<br>\n",
-    "The deadliest civil disaster in Israel's history.\n",
-    "<br>\n",
-    "30 April 2021"
+    "<div class=\"alert alert-info\">\n",
+    "    <h3> <a href=\"https://en.wikipedia.org/wiki/2021_Meron_crowd_crush\">2021 Meron crowd crush </a></h3>\n",
+    "    The deadliest civil disaster in Israel's history.\n",
+    "    <br>\n",
+    "    30 April 2021\n",
+    "</div>"
    ]
   },
   {
@@ -148,18 +151,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7195729b-ec8b-44e1-ae74-234f340994d5",
-   "metadata": {},
+   "id": "20d9c477-5885-46c8-9c3b-b099ffb3754a",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "### 2021 Mysterious silent disaster"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a6d7120f-ad42-4f25-b276-5a54ab956fc1",
-   "metadata": {},
-   "source": [
-    "Let's exclude the Meron crowd crush in 30 April 2021"
+    "<div class=\"alert alert-warning\">\n",
+    "    <h3> 2021 Mysterious silent disaster </h3>\n",
+    "    Let's exclude the Meron crowd crush in 30 April 2021\n",
+    "</div>"
    ]
   },
   {
@@ -233,12 +233,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90a78093-438a-4fb0-a789-3213cde81dac",
-   "metadata": {},
+   "id": "fa2b35d3-81ba-47bd-b499-55a10dfe5b36",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "### [2014 Gaza War](https://en.wikipedia.org/wiki/2014_Gaza_War)\n",
-    "\n",
-    "8 July – 26 August 2014"
+    "<div class=\"alert alert-info\">\n",
+    "    <h3> <a href=\"https://en.wikipedia.org/wiki/2014_Gaza_War\">2014 Gaza War </a></h3>\n",
+    "    8 July – 26 August 2014\n",
+    "</div>"
    ]
   },
   {
@@ -360,14 +363,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5fe802a-8003-423a-9a10-d6152a56b6e7",
-   "metadata": {},
+   "id": "af96dc23-ce37-4df4-a339-014cb3dc222f",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "### [2010 Mount Carmel forest fire](https://en.wikipedia.org/wiki/2010_Mount_Carmel_forest_fire)\n",
-    "<br>\n",
-    "A forest fire began on Mount Carmel which would kill forty and burn nearly twenty square miles over the next three days.\n",
-    "<br>\n",
-    "2 December – 5 December 2010"
+    "<div class=\"alert alert-info\">\n",
+    "    <h3> <a href=\"https://en.wikipedia.org/wiki/2010_Mount_Carmel_forest_fire\">2010 Mount Carmel forest fire </a></h3>\n",
+    "    A forest fire began on Mount Carmel which would kill forty and burn nearly twenty square miles over the next three days.\n",
+    "    <br>\n",
+    "    2 December – 5 December 2010\n",
+    "</div>"
    ]
   },
   {
